# benchmarks

./: Cargo.toml  README.md
programs/: Cargo.toml
programs/src/: lib.rs
programs/src/fibonacci/: fibonacci.val  mod.rs
programs/src/sha256/: mod.rs  sha256.ll  sha256.val
programs/src/sudoku/: mod.rs
runner/: Cargo.toml
src/: main.rs
